--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h2>About Me</h2>
           <hr style="color:lightgrey">
         </div>
-        <img class="doggo" src="assets/images/basso.jpg" alt="a picture of me">
+        <img class="doggo" src="assets/images/basso.jpg" alt="a picture of me" style="float:left;">
         <p> My name is Sergey Maguire, I am twenty-one years old and have lived in California for seventeen and a half years,
           I originally was born in Moscow, Russia. I have four siblings two brothers and two sisters. One of my brothers
           even has the same name as me and both of them are from Russia also. Currently I am working to become an electrician
